--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "tsc",
     "prepare": "is-ci || husky install",
     "preview": "turbo vite.preview",
-    "vite.build": "vite build",
+    "vite.build": "vite build --base=/poketcg-builder/",
     "vite.dev": "vite --host",
     "vite.preview": "vite preview"
   },
