--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "is-ci || husky install",
     "preview": "turbo vite.preview",
     "vite.build": "vite build",
-    "vite.dev": "vite --host --base=/",
+    "vite.dev": "vite --host",
     "vite.preview": "vite preview"
   },
   "lint-staged": {
